--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,8 @@
 [build]
-  publish = "build/web"
-  command = "flutter build web --release"
+  publish = "."
+  command = ""
 
 [[redirects]]
   from = "/*"
   to = "/index.html"
-  status = 200
-
-[build.environment]
-  FLUTTER_VERSION = "3.19.0" 
+  status = 200 
